--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,8 @@ psycopg2-binary==2.9.5
 pytz==2022.7
 sqlparse==0.4.3
 gunicorn==20.1.0
+cryptography==39.0.0
+django-cors-headers==3.13.0
+drf-jwt==1.19.2
+pyjwt==2.6.0
+requests==2.28.2
