--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,40 @@
 asgiref==3.6.0
-Django==4.1.5
+certifi==2022.12.7
+cffi==1.15.1
+chardet==3.0.4
+charset-normalizer==3.0.1
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==39.0.0
+defusedxml==0.7.1
+Django==4.2
+django-cors-headers==3.13.0
 django-filter==22.1
+django-guardian==2.4.0
+django-templated-mail==1.1.1
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
+djoser==2.2.0a0
+drf-jwt==1.19.2
+gunicorn==20.1.0
+idna==2.8
 install==1.3.5
+itypes==1.2.0
+Jinja2==3.1.2
 Markdown==3.4.1
+MarkupSafe==2.1.2
+oauthlib==3.2.2
 psycopg2==2.9.5
 psycopg2-binary==2.9.5
+pycparser==2.21
+PyJWT==2.6.0
+python3-openid==3.2.0
 pytz==2022.7
-sqlparse==0.4.3
-gunicorn==20.1.0
-cryptography==39.0.0
-django-cors-headers==3.13.0
-drf-jwt==1.19.2
-pyjwt==2.6.0
 requests==2.28.2
-django-guardian==2.4.0
+requests-oauthlib==1.3.1
+six==1.16.0
+social-auth-app-django==5.2.0
+social-auth-core==4.4.1
+sqlparse==0.4.3
+uritemplate==4.1.1
+urllib3==1.25.11
