--- a/requirements.txt
+++ b/requirements.txt
@@ -11,19 +11,24 @@ Django==4.2
 django-cors-headers==3.13.0
 django-filter==22.1
 django-guardian==2.4.0
+django-rest-swagger==2.2.0
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 djoser==2.2.0a0
 drf-jwt==1.19.2
+drf-yasg==1.21.5
 gunicorn==20.1.0
 idna==2.8
+inflection==0.5.1
 install==1.3.5
 itypes==1.2.0
 Jinja2==3.1.2
 Markdown==3.4.1
 MarkupSafe==2.1.2
 oauthlib==3.2.2
+openapi-codec==1.3.2
+packaging==23.1
 psycopg2==2.9.5
 psycopg2-binary==2.9.5
 pycparser==2.21
@@ -32,10 +37,13 @@ python3-openid==3.2.0
 pytz==2022.7
 requests==2.28.2
 requests-oauthlib==1.3.1
+ruamel.yaml==0.17.26
+ruamel.yaml.clib==0.2.7
+simplejson==3.19.1
 six==1.16.0
 social-auth-app-django==5.2.0
 social-auth-core==4.4.1
 sqlparse==0.4.3
+tzdata==2022.7
 uritemplate==4.1.1
 urllib3==1.25.11
-drf_yasg==1.21.5
