--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ cryptography==39.0.0
 defusedxml==0.7.1
 Django==4.2
 django-cors-headers==3.13.0
+django-environ==0.10.0
 django-filter==22.1
 django-guardian==2.4.0
 django-rest-swagger==2.2.0
@@ -20,6 +21,7 @@ drf-jwt==1.19.2
 drf-yasg==1.21.5
 gunicorn==20.1.0
 idna==2.8
+inflection==0.5.1
 install==1.3.5
 itypes==1.2.0
 Jinja2==3.1.2
@@ -46,4 +48,3 @@ sqlparse==0.4.3
 tzdata==2022.7
 uritemplate==4.1.1
 urllib3==1.25.11
-inflection==0.5.1
