--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,8 @@ MarkupSafe==2.1.2
 oauthlib==3.2.2
 openapi-codec==1.3.2
 packaging==23.1
+psycopg==3.1.9
+psycopg-binary==3.1.9
 psycopg2==2.9.5
 psycopg2-binary==2.9.5
 pycparser==2.21
@@ -45,6 +47,7 @@ six==1.16.0
 social-auth-app-django==5.2.0
 social-auth-core==4.4.1
 sqlparse==0.4.3
+typing_extensions==4.6.2
 tzdata==2022.7
 uritemplate==4.1.1
 urllib3==1.25.11
