--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.6.0
+boto3==1.26.142
+botocore==1.29.142
 certifi==2022.12.7
 cffi==1.15.1
 chardet==3.0.4
@@ -13,6 +15,7 @@ django-environ==0.10.0
 django-filter==22.1
 django-guardian==2.4.0
 django-rest-swagger==2.2.0
+django-storages==1.13.2
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
@@ -25,6 +28,7 @@ inflection==0.5.1
 install==1.3.5
 itypes==1.2.0
 Jinja2==3.1.2
+jmespath==1.0.1
 Markdown==3.4.1
 MarkupSafe==2.1.2
 oauthlib==3.2.2
@@ -36,12 +40,14 @@ psycopg2==2.9.5
 psycopg2-binary==2.9.5
 pycparser==2.21
 PyJWT==2.6.0
+python-dateutil==2.8.2
 python3-openid==3.2.0
 pytz==2022.7
 requests==2.28.2
 requests-oauthlib==1.3.1
 ruamel.yaml==0.17.26
 ruamel.yaml.clib==0.2.7
+s3transfer==0.6.1
 simplejson==3.19.1
 six==1.16.0
 social-auth-app-django==5.2.0
